--- a/iot-project/public/index.html
+++ b/iot-project/public/index.html
@@ -37,7 +37,9 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
+
   </head>
+
   <body>
     <div id="message">
       <h2>IOT Project</h2>
@@ -46,10 +48,18 @@
     </div>
 
     <h1>Data Display</h1>
+    <div class="input-container">
+      <label for="desiredTemperature">Desired Temperature (F):</label>
+      <input type="number" id="desiredTemperature" name="desiredTemperature" placeholder="Enter desired temperature..." class="temperature-input" step="1">
+    </div>
+    <div class="input-container">
+      <label for="desiredTemperature">Desired Temperature (C):</label>
+      <input type="number" id="desiredTemperature" name="desiredTemperature" placeholder="Enter desired temperature..." class="temperature-input" step="1">
+    </div>
     <div class="data-container">
       <div class="data-visual" id="temperatureVisual">
+        <h1>Temperature</h1>
         <div class="thermometer">
-          <h1>Temperature</h1>
           <div class="fluid" id="fluid"></div>
         </div>
         <div class="temperature-label" id="temperatureLabel"></div>
@@ -63,115 +73,133 @@
       </div>
     </div>
 
-    
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database-compat.js"></script>
+    <script src="index.html"></script>
+    <script>
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyBTfqxmmuPPHPrFrP6HHwhufslo_nFmDeo",
+        authDomain: "iot-project-8aba5.firebaseapp.com",
+        databaseURL: "https://iot-project-8aba5-default-rtdb.firebaseio.com",
+        // After deploying, view app at [projectId].web.app
+        projectId: "iot-project-8aba5",
+        storageBucket: "iot-project-8aba5.appspot.com",
+        messagingSenderId: "1082736731064",
+        appId: "1:1082736731064:web:58e91dea471104eb8be54d"
+      };
 
-      <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database-compat.js"></script>
-      <script src="index.html"></script>
-      <script>
-          // Your web app's Firebase configuration
-            const firebaseConfig = {
-              apiKey: "AIzaSyBTfqxmmuPPHPrFrP6HHwhufslo_nFmDeo",
-              authDomain: "iot-project-8aba5.firebaseapp.com",
-              databaseURL: "https://iot-project-8aba5-default-rtdb.firebaseio.com",
-              // After deploying, view app at [projectId].web.app
-              projectId: "iot-project-8aba5",  
-              storageBucket: "iot-project-8aba5.appspot.com",
-              messagingSenderId: "1082736731064",
-              appId: "1:1082736731064:web:58e91dea471104eb8be54d"
-            };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
 
-            // Initialize Firebase
-            firebase.initializeApp(firebaseConfig);
+      // Reference to Firebase database
+      const database = firebase.database();
 
-            // Reference to Firebase database
-            const database = firebase.database();
-
-            // Function to fetch temperature data from Firebase and update HTML
-            // Function to update displayed temperature and fluid level
-            function updateTemperature() {
-                const temperatureRef = database.ref('temperature');
-                temperatureRef.on('value', function(snapshot) {
-                    const temperature = snapshot.val();
-                    document.getElementById('temperatureLabel').innerText = temperature + " °C";
-                    const fluidHeight = temperature * 3; // Adjust this value to fit your scale
-                    document.getElementById('fluid').style.height = fluidHeight + "px";
-                }, function(error) {
-                    console.error("Error fetching temperature:", error);
-                    document.getElementById('temperatureLabel').innerText = "Error fetching temperature";
-                });
-            }
-
-            function updateHumidity() {
-              const humidityRef = database.ref('humidity');
-              humidityRef.on('value', function(snapshot) {
-                const humidity = snapshot.val();
-                document.getElementById('humidityLabel').innerText = humidity + " %"; 
-              }, function(error) {
-                console.error("Error fetching humidity:", error);
-                document.getElementById('humidityLabel').innerText = "Error fetching humidity";
-              });
-            }
-
-            // Call displayTemperature function when DOM content is loaded
-            document.addEventListener('DOMContentLoaded', function() {
-              updateTemperature();
-              updateHumidity();
-            });
-      </script>
-    
-    <style>
-      /* Container for data visuals */
-      .data-container {
-        display: flex; /* Use flexbox layout */
-        justify-content: space-around; /* Distribute space evenly between elements */
-        align-items: center; /* Center vertically */
-        margin-top: 20px;
+      // Function to fetch temperature data from Firebase and update HTML
+      // Function to update displayed temperature and fluid level
+      function updateTemperature() {
+        const temperatureRef = database.ref('temperature');
+        temperatureRef.on('value', function(snapshot) {
+          const temperature = snapshot.val();
+          document.getElementById('temperatureLabel').innerText = temperature + " °C";
+          const fluidHeight = temperature * 3; // Adjust this value to fit your scale
+          document.getElementById('fluid').style.height = fluidHeight + "px";
+        }, function(error) {
+          console.error("Error fetching temperature:", error);
+          document.getElementById('temperatureLabel').innerText = "Error fetching temperature";
+        });
       }
 
-      /* Styles for each data visual */
-      .data-visual {
-        text-align: center;
-        width: 200px; /* Adjust as needed */
+      function updateHumidity() {
+        const humidityRef = database.ref('humidity');
+        humidityRef.on('value', function(snapshot) {
+          const humidity = snapshot.val();
+          document.getElementById('humidityLabel').innerText = humidity + " %";
+          const humidHeight = humidity * 3; // Adjust this value to fit your scale
+          document.getElementById('humidityBar').style.height = humidHeight + "px";
+        }, function(error) {
+          console.error("Error fetching humidity:", error);
+          document.getElementById('humidityLabel').innerText = "Error fetching humidity";
+        });
       }
 
-      /* Thermometer styles */
-      .thermometer, .humidity {
-        width: 100%;
-        height: 400px;
-        background-color: #f0f0f0;
-        border-radius: 15px;
-        position: relative;
-        overflow: hidden;
-      }
+      // Call displayTemperature function when DOM content is loaded
+      document.addEventListener('DOMContentLoaded', function() {
+        updateTemperature();
+        updateHumidity();
+      });
+    </script>
 
-      /* Fluid level for thermometer */
-      .fluid {
-        width: 100%;
-        background-color: #3498db;
-        position: absolute;
-        bottom: 0;
-        transition: height 0.5s ease;
-      }
+<style>
+  h1, h2, p {text-align: center;
+  }
+  /* Container for data visuals */
+  .data-container {
+    display: flex; /* Use flexbox layout */
+    justify-content: space-around; /* Distribute space evenly between elements */
+    align-items: center; /* Center vertically */
+    margin-top: 20px;
+  }
 
-      /* Temperature and humidity labels */
-      .temperature-label, .humidity-label {
-        font-size: 24px;
-        font-weight: bold;
-        color: #333;
-        text-align: center;
-        margin-top: 20px;
-      }
+  /* Styles for each data visual */
+  .data-visual {
+    text-align: center;
+    width: 200px; /* Adjust as needed */
+  }
 
-      /* Humidity bar */
-      .humidity-bar {
-        width: 50px;
-        background-color: #27ae60;
-        position: absolute;
-        bottom: 0;
-        transition: height 0.5s ease;
-      }
-  </style>
+  /* Thermometer styles */
+  .thermometer, .humidity {
+    width: 100%;
+    height: 400px;
+    background-color: #f0f0f0;
+    border-radius: 15px;
+    position: relative;
+    overflow: hidden;
+  }
+
+  /* Fluid level for thermometer */
+  .fluid {
+    width: 100%;
+    background-color: #3498db;
+    position: absolute;
+    bottom: 0;
+    transition: height 0.5s ease;
+  }
+
+  /* Temperature and humidity labels */
+  .temperature-label, .humidity-label {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  /* Humidity bar */
+  .humidity-bar {
+    width: 50px;
+    background-color: #27ae60;
+    position: absolute;
+    bottom: 0;
+    transition: height 0.5s ease;
+  }
+
+  /* Input field container */
+  .input-container {
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  /* Input field styles */
+  input[type="number"] {
+    width: 200px;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+</style>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
@@ -194,13 +222,13 @@
         try {
           let app = firebase.app();
           let features = [
-            'auth', 
-            'database', 
+            'auth',
+            'database',
             'firestore',
             'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
+            'messaging',
+            'storage',
+            'analytics',
             'remoteConfig',
             'performance',
           ].filter(feature => typeof app[feature] === 'function');
